2019-04-23  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #18035]
	* elf/Makefile (tests-container): Add tst-pldd.
	* elf/pldd-xx.c: Use _Static_assert in of pldd_assert.
	(E(find_maps)): Avoid use alloca, use default read file operations
	instead of explicit LFS names, and fix infinite loop.
	* elf/pldd.c: Explicit set _FILE_OFFSET_BITS, cleanup headers.
	(get_process_info): Use _Static_assert instead of assert, use default
	directory operations instead of explicit LFS names, and free some
	leadek pointers.
	* elf/tst-pldd.c: New file.

2019-04-23  H.J. Lu  <hongjiu.lu@intel.com>

	* malloc/arena.c (do_set_mallopt_check): Removed.

2019-04-23  Florian Weimer  <fweimer@redhat.com>

	locale: Add LOCPATH diagnostics to the locale program.
	* locale/programs/locale.c (setlocale_failed): New variable.
	(try_setlocale): New function.
	(quote_string): Likewise.
	(setlocale_diagnostics): Likewise.
	(main): Call try_setlocale instead of setlocale.  Call
	setlocale_diagnostics.
	* locale/Makefile (tests-special): Add tst-locale-locpath.out.
	(tst-locale-locpath.out): New target.
	* locale/tst-locale-locpath.sh: New file.

2019-04-21  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* NEWS: Move memory allocation changes of BZ#23741 from 2.29
	to 2.30 notes.

2019-04-18  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #23741]
	* malloc/hooks.c (malloc_check, realloc_check): Use
	__builtin_add_overflow on overflow check and adapt to
	checked_request2size change.
	* malloc/malloc.c (__libc_malloc, __libc_realloc, _mid_memalign,
	__libc_pvalloc, __libc_calloc, _int_memalign): Limit maximum
	allocation size to PTRDIFF_MAX.
	(REQUEST_OUT_OF_RANGE): Remove macro.
	(checked_request2size): Change to inline function and limit maximum
	requested size to PTRDIFF_MAX.
	(__libc_malloc, __libc_realloc, _int_malloc, _int_memalign): Limit
	maximum allocation size to PTRDIFF_MAX.
	(_mid_memalign): Use _int_memalign call for overflow check.