@@ -1,3 +1,9 @@
+2019-04-24  Florian Weimer  <fweimer@redhat.com>
+
+	* locale/Makefile (tests-special): Guard setting by
+	$(run-built-tests) == yes, otherwise tst-locale-locpath attempts
+	to run while cross-compiling.
+
 2019-04-23  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
 	[BZ #18035]
